fix(): flex gap fallback

--- a/bricks/containers/src/banner/styles.shadow.css
+++ b/bricks/containers/src/banner/styles.shadow.css
@@ -43,3 +43,19 @@
 .page-desc {
   color: var(--banner-desc-color);
 }
+
+/* https://github.com/w3c/csswg-drafts/issues/3559#issuecomment-1758459996 */
+@supports not (inset: 0) {
+  .container {
+    gap: 0;
+  }
+
+  .title-and-desc {
+    gap: 0;
+    margin-bottom: var(--card-content-gap);
+  }
+
+  :host([banner-title]) .page-desc {
+    margin-top: 14px;
+  }
+}
