--- a/bricks/containers/src/content-layout/styles.shadow.css
+++ b/bricks/containers/src/content-layout/styles.shadow.css
@@ -7,3 +7,11 @@
 :host([hidden]) {
   display: none;
 }
+
+/* https://github.com/w3c/csswg-drafts/issues/3559#issuecomment-1758459996 */
+@supports not (inset: 0) {
+  :host {
+    display: grid;
+    grid-auto-flow: row;
+  }
+}
